---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: ???
  Bugfixes:
    - Fixed crash when quick-toggling spidertron whilst Spidertron Patrols is installed
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 2 May 2021
  Bugfixes:
    - Fixed crash when starting new game
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2 May 2021
  Features:
    - Added 'Shift + Right-click' to disconnect currently held remote
    - Spidertron inventories will never be forcibly closed, no matter how far away the spidertron becomes from the player
    - When holding a spidertron remote, 'Shift + E' now opens the GUI of the connected spidertron (when not holding a connected remote, it still opens the current vehicle GUI)
    - 'Shift + Q' (Spidertron remote pipette) will now pick remote connected to the spidertron the player is currently driving if no spidertron is selected
  Bugfixes:
    - Fixed 'Shift + E' opening the vehicle GUI instead of closing the current GUI for some GUIs
    - Fixed 'Shift + E' not closing the current GUI when not in a vehicle
    - Fixed crash in multiplayer when a passenger exits a spidertron that has no driver
    - Fixed 'Call last used spidertron' shortcut not toggling off when another player calls your spidertron
  Compatibility:
    - Compatibility added for Spidertron Patrols
---------------------------------------------------------------------------------------------------
Version: 1.4.11
Date: 20 April 2021
  Bugfixes:
    - Fixed crash when spidertron with no equipment grid dies
    - Fixed 'Travelling Spidertron' causing item loss if another mod increases spidertron inventory size
---------------------------------------------------------------------------------------------------
Version: 1.4.10
Date: 14 April 2021
  Features: